[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/Enemy/EnemyUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/meshes/baddie01.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://assets/meshes/baddie02.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/enemyhit.wav" type="AudioStream" id=5]

[sub_resource type="SphereShape" id=1]
radius = 2.0

[sub_resource type="SphereMesh" id=2]
radius = 0.5
height = 1.0

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_transparent = true
albedo_texture = SubResource( 3 )

[sub_resource type="QuadMesh" id=5]
resource_local_to_scene = true
material = SubResource( 4 )

[node name="Enemy" type="RigidBody" groups=[
"enemy",
]]
collision_layer = 129
collision_mask = 129
mass = 23.81
gravity_scale = 2.0
script = ExtResource( 3 )

[node name="baddie02_mesh" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -0.191884, -0.0638347 )

[node name="BoneAttachment" parent="baddie02_mesh/Armature/Skeleton" index="0"]
transform = Transform( 0.996461, -0.0840315, 0.00145605, 0.0194217, 0.247066, 0.968804, -0.0817697, -0.965348, 0.247823, -18.2998, 33.4254, -118.81 )

[node name="BoneAttachment2" parent="baddie02_mesh/Armature/Skeleton" index="1"]
transform = Transform( 0.722492, 0.4618, -0.514534, -0.684888, 0.376322, -0.623949, -0.0945099, 0.803196, 0.58817, 45.3306, 70.0477, -65.785 )

[node name="BoneAttachment3" parent="baddie02_mesh/Armature/Skeleton" index="2"]
transform = Transform( 0.752919, -0.656912, -0.0397193, 0.512947, 0.623582, -0.589942, 0.412307, 0.423804, 0.806469, -101.911, -14.4094, -36.2522 )

[node name="BoneAttachment4" parent="baddie02_mesh/Armature/Skeleton" index="3"]
transform = Transform( 0.640437, -0.125679, -0.757657, 0.767037, 0.0550011, 0.639242, -0.0386674, -0.990545, 0.131625, 0.988449, 8.45043, -40.129 )

[node name="BoneAttachment5" parent="baddie02_mesh/Armature/Skeleton" index="4"]
transform = Transform( 0.640437, -0.125679, -0.757657, 0.767037, 0.0550011, 0.639242, -0.0386674, -0.990545, 0.131625, 0.988449, 8.45043, -40.129 )

[node name="Subdivision_Surface_remesh_2" parent="baddie02_mesh/Armature/Skeleton/BoneAttachment5" index="0"]
transform = Transform( 0.798652, 0.593304, -0.100723, 0.0557458, -0.239589, -0.969272, -0.599205, 0.768497, -0.224423, 1.70085, 28.7618, 8.09855 )

[node name="baddie01_mesh" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -0.230668, 0 )

[node name="Skeleton" parent="baddie01_mesh/Attack" index="1"]
bones/1/bound_children = [  ]
bones/3/bound_children = [  ]
bones/5/bound_children = [  ]
bones/10/bound_children = [  ]
bones/18/bound_children = [  ]

[node name="BoneAttachment" parent="baddie01_mesh/Attack/Skeleton" index="0"]
transform = Transform( 0.99646, -0.0840618, 0.00146145, 0.0194238, 0.247087, 0.968799, -0.0818, -0.96534, 0.247845, -186.578, -432.61, -65.0176 )

[node name="BoneAttachment2" parent="baddie01_mesh/Attack/Skeleton" index="1"]
transform = Transform( 0.29273, 0.0573772, -0.954472, -0.701227, 0.691506, -0.173492, 0.650069, 0.720088, 0.242659, -102.72, -344.538, 25.4366 )

[node name="BoneAttachment3" parent="baddie01_mesh/Attack/Skeleton" index="2"]
transform = Transform( -0.317513, -0.656915, 0.683848, 0.281023, 0.623582, 0.729502, -0.905655, 0.423803, -0.0133869, -301.785, -479.659, 18.8994 )

[node name="BoneAttachment4" parent="baddie01_mesh/Attack/Skeleton" index="3"]
transform = Transform( 0.836085, 0.0561048, -0.545724, 0.548187, -0.0468549, 0.835042, 0.0212801, -0.997325, -0.0699305, -185.424, -436.79, -8.35954 )

[node name="BoneAttachment5" parent="baddie01_mesh/Attack/Skeleton" index="4"]
transform = Transform( 0.68119, 0.0356944, -0.731237, 0.731767, -0.0636566, 0.678576, -0.0223266, -0.997333, -0.0694821, -185.937, -435.839, 56.7688 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.00135422, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
mesh = SubResource( 2 )
material/0 = null

[node name="EnemyUI" parent="CollisionShape" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 5 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="BackswingTimer" type="Timer" parent="."]
one_shot = true

[node name="CheckTimer" type="Timer" parent="."]
autostart = true

[node name="ArmorUp" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="EnemyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="BackswingTimer" to="." method="_on_BackswingTimer_timeout"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_CheckTimer_timeout"]
[connection signal="timeout" from="ArmorUp" to="." method="_on_ArmorUp_timeout"]

[editable path="baddie02_mesh"]
[editable path="baddie01_mesh"]
